Script mejorado para instalar OmegaUp.